# arachnid

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
arachnid/: Cargo.toml
arachnid/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
rat/: Cargo.toml
rat/src/: lib.rs
