[package]
authors.workspace = true
categories = []
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["security"]
license.workspace = true
name = "arachnid"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
full = []

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]