[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "arachnid-core"
repository.workspace = true
readme.workspace = true
version.workspace = true

[features]
default = []

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
